# Digit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.cmake  digit_ysp.urdf  digit_ysp.xml  plot_msg.py  run.sh
Poplar/: CMakeLists.txt  README.md
Poplar/include/: Poplar.h  PoplarConfig.h
Poplar/include/LIPM/: LIPM_MPC.h
Poplar/include/RobotWrapper/: RobotWrapper.h
Poplar/include/SRGB_MPC/: SRGB_MPC.h
Poplar/include/TaskSpaceControl/: TSC_Config.h  TaskSpaceControl.h
Poplar/include/TaskSpaceControl/Constraints/: ActuatorLimit.h  ContactForceConstraints.h  ContactPointsConstraints.h  LinearConstraints.h
Poplar/include/TaskSpaceControl/Task/: ClosedChains.h  CoMMotionTask.h  ForceTask.h  JointsNominalTask.h  RegularizationTask.h  SE3MotionTask.h  Task.h
Poplar/include/Trajectory/: FootSwingTrajectory.h  Interpolate.h  LineLI.h  SamplePoint.h  Spline.h  Trajectory.h  TrajectoryInterpolation.h  spline.bak
Poplar/src/: Poplar.cpp
Poplar/src/LIPM/: LIPM_MPC.cpp
Poplar/src/RobotWrapper/: RobotWrapper.cpp
Poplar/src/SRGB_MPC/: SRGB_MPC.cpp
Poplar/src/TaskSpaceControl/: TaskSpaceControl.cpp
Poplar/src/TaskSpaceControl/Constraints/: ActuatorLimit.cpp  ClosedChainsConstraints.cpp  ContactForceConstraints.cpp  ContactPointsConstraints.cpp  LinearConstraints.cpp  QaccBound.cpp
Poplar/src/TaskSpaceControl/Task/: AngularMomentumTask.cpp  ClosedChains.cpp  CoMMotionTask.cpp  ForceTask.cpp  JointsNominalTask.cpp  RegularizationTask.cpp  SE3MotionTask.cpp  Task.cpp
Poplar/src/Trajectory/: FootSwingTrajectory.cpp  SamplePoint.cpp  Spline.cpp  TrajectoryInterpolation.cpp
Poplar/test/: CMakeLists.txt
Poplar/test/LIPM/: test.cpp
Poplar/test/RobotWrapper/: test.cpp
Poplar/test/RobotWrapper/model/: ur5_joint_limited_robot.urdf
Poplar/test/SRBD_MPC/: test.cpp  test_mpc.cpp
Poplar/test/TaskSpaceControl/: test.cpp
Poplar/test/Trajectory/: CubicBSplieTest.cpp  data_plot.py
PoplarLib/: CMakeLists.txt  README.md  path.h.cmake
PoplarLib/include/: PoplarLib.h
PoplarLib/include/RobotWrapper/: RobotWrapper.h
PoplarLib/include/SRGB_MPC/: SRGB_MPC.h
PoplarLib/include/TaskSpaceControl/: ConfigurationTSC.h  TaskSpaceControl.h
PoplarLib/include/TaskSpaceControl/Constraints/: ClosedChainsConstraints.h  LinearConstraints.h  QaccBound.h
PoplarLib/include/TaskSpaceControl/Task/: AngularMomentumTask.h  CoMMotionTask.h  RegularizationTask.h  SE3MotionTask.h  Task.h
PoplarLib/include/Trajectory/: SamplePoint.h  Spline.h  Trajectory.h  TrajectoryInterpolation.h  config.h  spline.bak
PoplarLib/src/: PoplarLib.cpp
PoplarLib/src/SRGB_MPC/: SRGB_MPC.cpp
PoplarLib/src/TaskSpaceControl/: TaskSpaceControl.cpp
PoplarLib/src/TaskSpaceControl/Constraints/: ActuatorLimit.cpp  ClosedChainsConstraints.cpp  ContactForceConstraints.cpp  ContactPointsConstraints.cpp  LinearConstraints.cpp  QaccBound.cpp
PoplarLib/src/TaskSpaceControl/Task/: AngularMomentumTask.cpp  CoMMotionTask.cpp  JointsNominalTask.cpp  RegularizationTask.cpp  SE3MotionTask.cpp
PoplarLib/src/Trajectory/: LineLI.cpp  SamplePoint.cpp  Spline.cpp  Trajectory.cpp  TrajectoryInterpolation.cpp
PoplarLib/test/: CMakeLists.txt
PoplarLib/test/RobotWrapper/: test.cpp
PoplarLib/test/RobotWrapper/model/: ur5.xml
PoplarLib/test/SRBD_MPC/: data_plot.py  test.cpp
PoplarLib/test/TaskSpaceControl/: atlas.urdf  digit_ysp.urdf  test.cpp
PoplarLib/test/Trajectory/: CubicBSplieTest.cpp  data.txt  data_plot.py
Simulation/: CMakeLists.txt  main.cpp
Simulation/include/: glfw3.h  mjui.h  mjvisualize.h  mjxmacro.h  mujoco.h  simulate.h
Simulation/lib/: basic  derivative  digit_for_mujoco.urdf  digit_pro.xml  mjkey.txt  record  testspeed  testxml
Simulation/lib/urdf/: digit.gv  digit_for_mujoco.urdf  digit_model.urdf
Simulation/model/: compile  digit.srdf  digit.urdf  digit.xml  digit_model.urdf  digit_model.xml  digit_ysp.urdf  digit_ysp.xml  digit_ysp_o.urdf  digit_ysp_o.xml  mjkey.txt
Simulation/model/meshes/: achilles-rod.stl  arm-L11.stl  arm-L31.stl  heel-spring.stl  hip-roll-housing.stl  hip-yaw-housing1.stl  knee1.stl  shin.stl  tarsus.stl  toe-A-rod.stl  toe-output.stl  toe-pitch1.stl
TypeDefinition/include/: EigenTypes.h  SharedMemory.h  SharedMessages.h  StateAndCommand.h  Trajectory.h
User/: CMakeLists.txt  main.cpp
User/include/: Manager.h
User/include/Controller/: Controller.h  TSC.h
User/include/GaitScheduler/: FSM.h  Gait.h  GaitScheduler.h
User/include/Planner/: FloatingBasePlanner.h  FootPlanner.h  Planner.h
User/include/lcm/: RobotMessage.lcm
User/src/: Manager.cpp
User/src/Controller/: Controller.cpp  TSC.cpp
User/src/GaitScheduler/: FSM.cpp  Gait.cpp  GaitScheduler.cpp
User/src/Planner/: FloatingBasePlanner.cpp  FootPlanner.cpp  Planner.cpp
digit_description/: CMakeLists.txt  package.xml
digit_description/config/: digit.rviz
digit_description/launch/: display.launch
digit_description/meshes/: arm-L2.stl  arm-L41.stl  hip-pitch-housing1.stl  hip-pitch.stl  shoulder-roll-housing.stl  toe-B-rod.stl  toe-roll.stl  torso.stl
digit_description/urdf/: digit.urdf  digit.xml
lcm_msg/: RobotMessage.hpp  RobotMessage.lcm  RobotMessage.py  Trajectory.lcm  Trajectory_LCM.hpp
